@@ -5,6 +5,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-6244] fixed setting cookies as secure under https (Ivo)
 A.F....... [ZBX-7171] fixed displaying correct percentages in item and trigger error messages (Ivo)
 ....I..... [ZBX-5590] fixed item multiplier for jmx["java.lang:type=Compilation",TotalCompilationTime] (asaveljevs)
 ....I..... [ZBX-6577] improved "Template JMX Generic" by adding some interesting items and triggers (asaveljevs)
